# revforge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SAFETY.md  pyproject.toml  requirements.txt
examples/: README.md
revforge/: __init__.py  cli.py  flags.py  generator.py  quality.py  recipes.py  selftest.py  terminal.py  uniqueness.py  utils.py
revforge/ai/: __init__.py  agent_prompts.py  anthropic_provider.py  base.py  commands.py  gemini_provider.py  local_provider.py  openai_provider.py  prompts.py  providers.py  schema.py  validator.py
revforge/builders/: __init__.py  android_ndk_builder.py  clang_builder.py  gcc_builder.py  mingw_builder.py  wasm_builder.py
revforge/targets/: __init__.py  android.py  elf.py  exe.py  macho.py  wasm.py
revforge/templates/: __init__.py  registry.py
tests/: test_ai.py  test_generation.py
