[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revforge"
version = "0.4.0"
description = "Safe educational reverse engineering CTF challenge generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RevForge" }]
keywords = ["ctf", "reverse-engineering", "crackme", "education", "security-training"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Security",
]
dependencies = ["rich>=13.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
revforge = "revforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["revforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
